--- a/Navigation-router/src/index.css
+++ b/Navigation-router/src/index.css
@@ -13,10 +13,37 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+header {
+  width: 205vh;
+  height: 55px;
+  position: fixed;
+  display: flex;
+  top: 0px;
+  left: 0px;
+  right: 0px;
+  border-bottom: 0.375px solid rgba(0, 0, 0, 0.379);
+  align-items: center;
+}
+
+h2 {
+  margin-left: 150px;
+  margin-right: 600px;
+}
+
+.Links{
+  top: 40px;
+  display: flex;
+  align-items: center;
+  margin-left: 400px;
+  margin-top: 5px;
+  text-decoration: none;
+  color: black;
+}
+
 a {
   font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
+  text-decoration: none;
+  color: black;
 }
 a:hover {
   color: #535bf2;
