--- a/Navigation-router/src/index.css
+++ b/Navigation-router/src/index.css
@@ -4,7 +4,8 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
+  color: #213547;
+  background-color: #ffffff;
   background-color: #242424;
 
   font-synthesis: none;
@@ -25,7 +26,9 @@ header {
   align-items: center;
 }
 
-h2 {
+
+
+.Navbarh2 {
   margin-left: 150px;
   margin-right: 600px;
 }
@@ -46,7 +49,7 @@ a {
   color: black;
 }
 a:hover {
-  color: #535bf2;
+  color: #747bff;
 }
 
 body {
@@ -69,7 +72,7 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+   background-color: #f9f9f9;
   cursor: pointer;
   transition: border-color 0.25s;
 }
@@ -81,15 +84,32 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.lightTheme,
+.lightTheme button,
+.lightTheme a{
+  background-color: white;
+  color: black;
 }
+
+.blackTheme,
+.blackTheme button,
+.blackTheme a{
+  background-color: black;
+  color: white;
+}
+
+.lightTheme header{
+  background-color: white;
+  color: black;
+  border-bottom: 0.375px solid rgba(0, 0, 0, 0.205);
+}
+
+.blackTheme header{
+  background-color: black;
+  color: white;
+  border-bottom: 0.375px solid rgba(255, 255, 255, 0.461);
+}
+
+
+
+
